--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-marantz-denon-telnet",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Marantz and Denon AVR Telnet Plugin for Homebridge",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,13 @@
     "url": "git+https://github.com/k3erg/homebridge-marantz-denon-telnet.git"
   },
   "keywords": [
-    "homebridge-plugin"
+    "homebridge-plugin",
+    "homekit",
+    "marantz",
+    "denon",
+    "telnet",
+    "remote",
+    "upnp"
   ],
   "engines": {
     "node": ">=0.12.0",
@@ -26,8 +32,5 @@
   "dependencies": {
     "marantz-denon-telnet": "0.0.6",
     "marantz-denon-upnpdiscovery": "0.0.1"
-  },
-  "directories": {
-    "lib": "lib"
   }
 }
